# tesa

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  annotation_task.ipynb  create_annotation_batches.py  create_annotation_queries.py  create_annotation_task.py  create_modeling_task.py  database_creation_nyt.ipynb  db_annotations.py  db_mkturk_batches.py  db_mkturk_queries.py  main.py  main_database  main_database.py  mt_models.py  mt_task.py  notes.txt  parameters.py  preprocess_annotations.py  pyproject.toml  requirements-poetry.txt  requirements-pre-commit.txt  run_baseline.py  run_baselines.py  run_model.py  run_models.py  save_modeling_task.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
database_creation/: annotation_task.py  article.py  articles.py  coreference.py  coreferences.py  database.py  databases.py  modeling_task.py  np.py  nps.py  nyt.py  nyt_article.py  nyt_new.py  sentence.py  sentences.py  snli.py  task.py  text.py  token.py  utils.py  word.py  words.py
dataset_creation/: article.py  dataset.py  miscellaneous.py  task.py
jobs/: job_rte_modified.sh  job_rte_vanilla.sh
modeling/: logistic_regression  metrics.py  modeling_task.py  models.py  modules.py  nn.py  pipeline.py  ranking_task.py  utils.py
notebooks/: annotation_results.ipynb  create_modeling_task.ipynb  database_creation_nyt.ipynb  database_creation_nyt_new.ipynb  dataset_creation.ipynb  dataset_creation.py  dataset_loading.ipynb  dataset_loading.py  dataset_statistics.ipynb  dataset_statistics.py  modelling_task.ipynb  pilot_creation.ipynb  run_baselines.ipynb  (+13 more)
(+1251 files in other folders)
