[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = [
  'py310',
  'py311',
  'py37',
  'py38',
  'py39'
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pass",
  "pragma: no cover",
  "raise NotImplementedError",
  "raise TypeError",
  "raise ValueError"
]

[tool.isort]
line_length = 100
profile = 'black'

[tool.poetry]
authors = ["Clément Jumel <clement.jumel@gmail.com>"]
description = "TESA: A Task in Entity Semantic Aggregation for Abstractive Summarization"
license = "Apache-2.0"
name = "tesa"
readme = "README.md"
repository = "https://github.com/clementjumel/tesa"
version = "0.1.0"

[tool.poetry.dependencies]
Unidecode = "1.1.1"
boto = "2.49.0" # Speed up deps resolution
boto3 = "1.9.66" # Speed up deps resolution
botocore = "1.12.189" # Speed up deps resolution
gensim = "3.8.0"
matplotlib = "3.1.3"
nltk = "3.6.5"
numpy = "1.18.1"
pandas = "1.0.3"
python = "~3.7"
tensorboard = "2.0.0"
torch = "1.4.0"
tqdm = "4.44.1"
transformers = "4.30.0"
wikipedia = "1.4.0"

[tool.poetry.group.notebooks.dependencies]
jupytext = "1.14.6"
notebook = "6.4.1"
